# tokbar

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  app_settings.rs  claude.rs  codex.rs  format.rs  lib.rs  litellm.rs  main.rs  pricing.rs  proxy_config.rs  raw_format.rs  rightcodes.rs  rightcodes_api.rs  rightcodes_token_store.rs  test_util.rs  time_parse.rs  time_range.rs  usage.rs
