[package]
name = "tokbar"
version = "0.1.0"
description = "一个统计codex和claude code使用tokens的工具"
authors = ["akimixu"]
edition = "2021"
default-run = "tokbar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tokbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
glob = "0.3"
ureq = { version = "2", features = ["socks-proxy"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
codegen-units = 1
incremental = false
lto = true
panic = "abort"
strip = "symbols"
